[gd_scene load_steps=8 format=3 uid="uid://d0hbnn0ab2iph"]

[ext_resource type="Texture2D" uid="uid://cjf26enqpgosf" path="res://prsiibastextures/1.png" id="1_77j1r"]
[ext_resource type="Script" uid="uid://bbndkx6u56yb7" path="res://puzzle.gd" id="1_hgotr"]
[ext_resource type="Script" uid="uid://bhr6d43n8wbls" path="res://texture_rect_1.gd" id="2_hgotr"]
[ext_resource type="Texture2D" uid="uid://drhdrmjgbak54" path="res://prsiibastextures/2.png" id="4_q2gwe"]
[ext_resource type="Texture2D" uid="uid://dwlni8u3ryuos" path="res://prsiibastextures/3.png" id="5_mgmmf"]
[ext_resource type="Texture2D" uid="uid://cas3b0ed7ple6" path="res://prsiibastextures/4.png" id="6_hrnaw"]
[ext_resource type="Texture2D" uid="uid://br035bx3x8xjl" path="res://prsiibastextures/5.png" id="7_dcmwq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hgotr")

[node name="Teksts" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 27.0
offset_right = 782.0
offset_bottom = 77.0
scale = Vector2(1.185, 1.185)

[node name="Label" type="Label" parent="Teksts"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Teksts"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="Teksts/HBoxContainer"]
layout_mode = 2
text = "Biznesa Prasības, "

[node name="Label2" type="Label" parent="Teksts/HBoxContainer"]
layout_mode = 2
text = "Lietotāju Prasības, "

[node name="Label3" type="Label" parent="Teksts/HBoxContainer"]
layout_mode = 2
text = "Kvalitātes Prasības, "

[node name="Label4" type="Label" parent="Teksts/HBoxContainer"]
layout_mode = 2
text = "Funkcionālas Prasības, "

[node name="Label5" type="Label" parent="Teksts/HBoxContainer"]
layout_mode = 2
text = "Ierobežojumi"

[node name="TextureRect1" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 551.0
offset_top = 291.0
offset_right = 701.0
offset_bottom = 391.0
mouse_filter = 0
texture = ExtResource("1_77j1r")
expand_mode = 1
script = ExtResource("2_hgotr")

[node name="TextureRect2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 298.0
offset_top = 149.0
offset_right = 448.0
offset_bottom = 249.0
mouse_filter = 0
texture = ExtResource("4_q2gwe")
expand_mode = 1
script = ExtResource("2_hgotr")

[node name="TextureRect3" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 429.0
offset_top = 230.0
offset_right = 579.0
offset_bottom = 330.0
mouse_filter = 0
texture = ExtResource("5_mgmmf")
expand_mode = 1
script = ExtResource("2_hgotr")

[node name="TextureRect4" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 368.0
offset_top = 321.0
offset_right = 518.0
offset_bottom = 421.0
mouse_filter = 0
texture = ExtResource("6_hrnaw")
expand_mode = 1
script = ExtResource("2_hgotr")

[node name="TextureRect5" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_left = 262.0
offset_top = 265.0
offset_right = 412.0
offset_bottom = 365.0
mouse_filter = 0
texture = ExtResource("7_dcmwq")
expand_mode = 1
script = ExtResource("2_hgotr")

[node name="CheckButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -95.0
offset_right = 70.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
text = "Pārbaudīt Kārību"

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -46.0
offset_right = 107.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
text = " "

[node name="NewGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -27.0
offset_right = 68.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "Jauna Spēle!"
